# nb2tex

./: CHANGELOG.md  README.md  demo.aux  demo.fdb_latexmk  demo.fls  pyproject.toml
examples/: demo.aux  demo.fdb_latexmk  demo.fls  demo.ipynb  demo.tex  regression_demo.aux  regression_demo.fdb_latexmk  regression_demo.fls  regression_demo.ipynb  regression_demo.out  regression_demo.tex
nb2tex/: __init__.py  cli.py  extractors.py  ir.py  parser.py  renderer.py  utils.py
nb2tex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
nb2tex/templates/: template.tex
templates/: template.fdb_latexmk  template.fls  template.tex
tests/: test_regression_pdflatex.py
