[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nb2tex"
version = "0.1.0"
description = "Convert Jupyter notebooks to LaTeX with figures, tables, equations, and code blocks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pypandoc",
    "beautifulsoup4"
]

[project.scripts]
nb2tex = "nb2tex.cli:main"

[tool.setuptools.packages.find]
include = ["nb2tex*"]

[tool.setuptools.package-data]
nb2tex = ["templates/*.tex"]